20344
http://stackoverflow.com/questions/14807767/algorithm-behind-unclosed-character-literal

This could be more beginner-friendly:
```scala
scala> 'utf-8'
<console>:1: error: unclosed character literal
'utf-8'
      ^

scala> 'utf
res1: Symbol = 'utf

scala> 'utf - 8'
<console>:1: error: unclosed character literal
'utf - 8'
        ^

scala> ''
<console>:1: error: unclosed character literal
''
^

scala> 'utf8'
<console>:1: error: unclosed character literal
'utf8'
     ^

scala> 'utf_8'
<console>:1: error: unclosed character literal
       'utf_8'
       ++++++^
```
